--- a/app/src/main/res/layout/activity_what.xml
+++ b/app/src/main/res/layout/activity_what.xml
@@ -38,7 +38,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
-            android:background="?attr/appbg">
+            android:background="?attr/appBg">
 
             <TextView
                 android:paddingLeft="15dp"
