--- a/app/src/main/res/layout/item_authorblog.xml
+++ b/app/src/main/res/layout/item_authorblog.xml
@@ -16,7 +16,7 @@
         android:id="@+id/ll_item"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="?attr/appbg"
+        android:background="?attr/appBg"
         android:orientation="vertical">
 
         <RelativeLayout
