--- a/app/src/main/res/drawable/menuitem_selector.xml
+++ b/app/src/main/res/drawable/menuitem_selector.xml
@@ -7,7 +7,7 @@
     </item>
     <item android:state_pressed="false">
         <shape android:shape="rectangle">
-            <solid android:color="?attr/appbg" />
+            <solid android:color="?attr/appBg" />
         </shape>
     </item>
 </selector>
