--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,7 +1,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:orientation="vertical"
-    android:background="?attr/appbg"
+    android:background="?attr/appBg"
     android:layout_height="match_parent">
 
     <include layout="@layout/layout_top" />
