--- a/app/src/main/res/layout/item_author.xml
+++ b/app/src/main/res/layout/item_author.xml
@@ -1,67 +1,73 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
-    android:layout_width="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    app:cardElevation="5dp"
-    app:cardCornerRadius="2dp"
     android:layout_marginLeft="6dp"
     android:layout_marginRight="6dp"
-    android:layout_marginTop="10dp">
+    android:layout_marginTop="10dp"
+    android:orientation="vertical"
+    app:cardCornerRadius="2dp"
+    app:cardElevation="5dp">
 
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingLeft="8dp"
-        android:id="@+id/rl_menu"
+        android:layout_height="match_parent"
         android:background="@drawable/menuitem_selector"
-        android:paddingBottom="8dp"
-        android:paddingTop="8dp">
+        android:orientation="vertical">
 
-        <ImageView
-            android:id="@+id/iv_header"
-            android:layout_width="48dp"
-            android:src="@drawable/ic_launcher"
-            android:layout_height="48dp" />
-
-        <TextView
-            android:id="@+id/tv_name"
-            android:singleLine="true"
-            android:textSize="18sp"
-            android:layout_marginTop="3dp"
-            android:textColor="?attr/textLight"
-            android:layout_width="wrap_content"
+        <RelativeLayout
+            android:id="@+id/rl_menu"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_toRightOf="@id/iv_header"
-            android:layout_marginLeft="8dp"
-             />
+            android:paddingBottom="8dp"
+android:background="?attr/appBg"
+            android:paddingLeft="8dp"
+            android:paddingTop="8dp">
 
-        <TextView
-            android:id="@+id/tv_time"
-            android:singleLine="true"
-            android:textSize="16sp"
-            android:layout_marginTop="3dp"
-            android:textColor="?attr/textLight"
-            android:layout_below="@id/tv_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_toRightOf="@id/iv_header"
-            android:layout_marginLeft="8dp" />
+            <ImageView
+                android:id="@+id/iv_header"
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                android:src="@drawable/ic_launcher" />
 
-        <TextView
-            android:id="@+id/tv_counts"
-            android:singleLine="true"
-            android:textSize="16sp"
-            android:layout_marginTop="4dp"
-            android:textColor="?attr/textLight"
-            android:layout_below="@id/tv_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="16dp"
-            android:layout_alignParentRight="true"
-            android:layout_marginLeft="8dp" />
-    </RelativeLayout>
+            <TextView
+                android:id="@+id/tv_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="8dp"
+                android:layout_marginTop="3dp"
+                android:layout_toRightOf="@id/iv_header"
+                android:singleLine="true"
+                android:textColor="?attr/textLight"
+                android:textSize="18sp" />
+
+            <TextView
+                android:id="@+id/tv_time"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/tv_name"
+                android:layout_marginLeft="8dp"
+                android:layout_marginTop="3dp"
+                android:layout_toRightOf="@id/iv_header"
+                android:singleLine="true"
+                android:textColor="?attr/textLight"
+                android:textSize="16sp" />
+
+            <TextView
+                android:id="@+id/tv_counts"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_below="@id/tv_name"
+                android:layout_marginLeft="8dp"
+                android:layout_marginRight="16dp"
+                android:layout_marginTop="4dp"
+                android:singleLine="true"
+                android:textColor="?attr/textLight"
+                android:textSize="16sp" />
+        </RelativeLayout>
+    </LinearLayout>
 
 
 </android.support.v7.widget.CardView>
