--- a/app/src/main/res/layout/item_blog.xml
+++ b/app/src/main/res/layout/item_blog.xml
@@ -15,151 +15,158 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp">
-
-            <LinearLayout
-                android:id="@+id/ll"
-                android:layout_marginLeft="10dp"
-                android:layout_alignParentLeft="true"
-                android:orientation="vertical"
-                android:layout_marginTop="4dp"
-                android:gravity="center_horizontal"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
-
-                <ImageView
-                    android:id="@+id/iv_header"
-                    android:layout_width="48dp"
-                    android:layout_height="48dp"
-                    android:src="@drawable/ic_launcher" />
-
-                <TextView
-                    android:id="@+id/tv_name"
-                    android:layout_width="wrap_content"
-                    android:text="只是想改变只是想改变只是想改变只是想改变"
-                    android:maxLength="5"
-                    android:singleLine="true"
-
-                    android:layout_marginTop="8dp"
-                    android:textColor="?attr/textNight"
-                    android:layout_height="wrap_content" />
-            </LinearLayout>
-
-
-            <TextView
-                android:id="@+id/tv_title"
-                android:textColor="?attr/textLight"
-                android:text="记一次android登陆页面的实现"
-                android:singleLine="true"
-                android:textSize="18sp"
-                android:layout_toRightOf="@id/ll"
-                android:layout_marginLeft="12dp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
-
-            <TextView
-                android:id="@+id/tv_detail"
-                android:textColor="?attr/textNight"
-                android:text="记一次android登陆页面的实现记一次android登陆页面的实现记一次android登陆页面的实现记一次android登陆页面的实现记一次android登陆页面的实现"
-                android:textSize="16sp"
-                android:layout_below="@id/tv_title"
-                android:layout_marginTop="2dp"
-                android:layout_toRightOf="@id/ll"
-                android:maxLines="3"
-                android:ellipsize="end"
-                android:layout_marginLeft="12dp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
-
-            <TextView
-                android:id="@+id/tv_time"
-                android:layout_alignParentRight="true"
-                android:layout_marginRight="8dp"
-                android:singleLine="true"
-                android:textColor="?attr/textNight"
-                android:textSize="16sp"
-                android:text="2014:11111111"
-                android:layout_width="wrap_content"
-                android:layout_below="@id/tv_detail"
-                android:layout_marginTop="6dp"
-                android:layout_height="wrap_content" />
-        </RelativeLayout>
-
         <LinearLayout
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:gravity="center_vertical"
-            android:paddingLeft="10dp"
-            android:layout_marginBottom="8dp">
+            android:orientation="vertical"
+            android:background="?attr/appBg"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp">
 
-            <LinearLayout
-                android:layout_weight="1"
-                android:layout_width="0dp"
-                android:gravity="center_vertical"
-                android:layout_height="wrap_content">
+                <LinearLayout
+                    android:id="@+id/ll"
+                    android:layout_marginLeft="10dp"
+                    android:layout_alignParentLeft="true"
+                    android:orientation="vertical"
+                    android:layout_marginTop="4dp"
+                    android:gravity="center_horizontal"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content">
 
-                <ImageView
-                    android:src="@drawable/comments"
+                    <ImageView
+                        android:id="@+id/iv_header"
+                        android:layout_width="48dp"
+                        android:layout_height="48dp"
+                        android:src="@drawable/ic_launcher" />
+
+                    <TextView
+                        android:id="@+id/tv_name"
+                        android:layout_width="wrap_content"
+                        android:text="只是想改变只是想改变只是想改变只是想改变"
+                        android:maxLength="5"
+                        android:singleLine="true"
+
+                        android:layout_marginTop="8dp"
+                        android:textColor="?attr/textNight"
+                        android:layout_height="wrap_content" />
+                </LinearLayout>
+
+
+                <TextView
+                    android:id="@+id/tv_title"
+                    android:textColor="?attr/textLight"
+                    android:text="记一次android登陆页面的实现"
+                    android:singleLine="true"
+                    android:textSize="18sp"
+                    android:layout_toRightOf="@id/ll"
+                    android:layout_marginLeft="12dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" />
 
                 <TextView
-                    android:id="@+id/tv_comments"
-                    android:layout_marginLeft="4dp"
+                    android:id="@+id/tv_detail"
                     android:textColor="?attr/textNight"
-                    android:textSize="18sp"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_weight="1"
-                android:gravity="center_vertical"
-
-                android:layout_width="0dp"
-                android:layout_height="wrap_content">
-
-                <ImageView
-                    android:src="@drawable/read"
+                    android:text="记一次android登陆页面的实现记一次android登陆页面的实现记一次android登陆页面的实现记一次android登陆页面的实现记一次android登陆页面的实现"
+                    android:textSize="16sp"
+                    android:layout_below="@id/tv_title"
+                    android:layout_marginTop="2dp"
+                    android:layout_toRightOf="@id/ll"
+                    android:maxLines="3"
+                    android:ellipsize="end"
+                    android:layout_marginLeft="12dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" />
 
                 <TextView
-                    android:id="@+id/tv_read"
-                    android:layout_marginLeft="4dp"
+                    android:id="@+id/tv_time"
+                    android:layout_alignParentRight="true"
+                    android:layout_marginRight="8dp"
+                    android:singleLine="true"
                     android:textColor="?attr/textNight"
-                    android:textSize="18sp"
+                    android:textSize="16sp"
+                    android:text="2014:11111111"
                     android:layout_width="wrap_content"
+                    android:layout_below="@id/tv_detail"
+                    android:layout_marginTop="6dp"
                     android:layout_height="wrap_content" />
-            </LinearLayout>
+            </RelativeLayout>
 
             <LinearLayout
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
                 android:gravity="center_vertical"
+                android:paddingLeft="10dp"
+                android:layout_marginBottom="8dp">
 
-                android:layout_weight="1"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content">
+                <LinearLayout
+                    android:layout_weight="1"
+                    android:layout_width="0dp"
+                    android:gravity="center_vertical"
+                    android:layout_height="wrap_content">
 
-                <ImageView
-                    android:src="@drawable/collect"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
+                    <ImageView
+                        android:src="@drawable/comments"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content" />
 
-                <TextView
-                    android:id="@+id/tv_collect"
-                    android:layout_marginLeft="4dp"
-                    android:textColor="?attr/textNight"
-                    android:textSize="18sp"
-                    android:text="立刻收藏"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
+                    <TextView
+                        android:id="@+id/tv_comments"
+                        android:layout_marginLeft="4dp"
+                        android:textColor="?attr/textNight"
+                        android:textSize="18sp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_weight="1"
+                    android:gravity="center_vertical"
+
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content">
+
+                    <ImageView
+                        android:src="@drawable/read"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content" />
+
+                    <TextView
+                        android:id="@+id/tv_read"
+                        android:layout_marginLeft="4dp"
+                        android:textColor="?attr/textNight"
+                        android:textSize="18sp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:gravity="center_vertical"
+
+                    android:layout_weight="1"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content">
+
+                    <ImageView
+                        android:src="@drawable/collect"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content" />
+
+                    <TextView
+                        android:id="@+id/tv_collect"
+                        android:layout_marginLeft="4dp"
+                        android:textColor="?attr/textNight"
+                        android:textSize="18sp"
+                        android:text="立刻收藏"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content" />
+                </LinearLayout>
             </LinearLayout>
         </LinearLayout>
+
+
     </LinearLayout>
 
 
