--- a/app/src/main/res/layout/activity_what.xml
+++ b/app/src/main/res/layout/activity_what.xml
@@ -8,7 +8,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:paddingBottom="10dp">
+        android:paddingBottom="10dp"
+        android:background="?attr/appBg">
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -38,7 +39,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
-            android:background="?attr/appBg">
+           >
 
             <TextView
                 android:paddingLeft="15dp"
