--- a/app/src/main/res/layout/activity_what.xml
+++ b/app/src/main/res/layout/activity_what.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-
+    android:background="?attr/appBg"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -8,8 +8,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:paddingBottom="10dp"
-        android:background="?attr/appBg">
+       >
 
         <RelativeLayout
             android:layout_width="match_parent"
